--- a/scss/forms.scss
+++ b/scss/forms.scss
@@ -33,6 +33,6 @@ select {
 
 .createDebt {
     .who { width: 120px; }
-    .amount { width: 67px; }
+    .amount { width: 65px; }
     .description { width: 100%; }
 }
